--- a/style.css
+++ b/style.css
@@ -53,3 +53,42 @@ body {
  .operator{
     color: rgb(125, 241, 125);
  }
+
+ @media screen and (max-width: 640px) {
+    .operator{
+        color:rgb(125, 241, 125);
+    }
+    button{
+        border: none;
+        width: 50px;
+        height: 50px;
+        /* margin: 8px; */
+        border-radius: 50%;
+        background: transparent;
+        color: white;
+        font-size: 20px;
+        box-shadow: -8px -8px 15px rgba(255, 255, 255,0.2);
+        cursor: pointer;
+        color: white;
+     }
+     .calculator{
+        width: 80%;
+        border: 1px solid #717377;
+        padding: 10px;
+        border-radius: 16px;
+        background: transparent;
+        box-shadow: 0px 3px 15px rgb(110, 115, 119);
+     }
+     input{
+        width: 80%;
+        border: none;
+        margin: 5px;
+        background: transparent;
+        box-shadow: 0px 3px 15px rgbs(84,84,84,0.1);
+        font-size: 30px;
+        text-align: right;
+        cursor: pointer;
+        color: white;
+     }
+
+ }
