--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
         border: none;
         width: 50px;
         height: 50px;
-        /* margin: 8px; */
+        margin: 8px;
         border-radius: 50%;
         background: transparent;
         color: white;
